--- a/hw3/public/stylesheets/style.css
+++ b/hw3/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 /*
-    Homework 1 - HTML and CSS
+    Homework 3 - Building App using Node.js and Express
     AUTHOR: Hassinullah Niazy 
-    DATE: 01/21/2026
+    DATE: 02/03/2026
 */
 
 /* Webpage body */
